# lvgl_check

./: .gitmodules  main.c  meson.build  vs.txt
lvgl/: lv_conf.h  lv_drv_conf.h
